# game-ad-system

./: .gitignore  CLAUDE.md  README.md  游戏买量系统.md
game-ad-desktop/backend/: pyproject.toml
game-ad-desktop/backend/api/: main.py
game-ad-desktop/backend/tasks/: celery_app.py  creative_tasks.py  data_tasks.py  memory_tasks.py
game-ad-system/: .dockerignore  .env.example  Makefile  launcher.py  pyproject.toml
game-ad-system/api/: main.py
game-ad-system/api/routes/: creative.py  data.py  execution.py  manager.py  memory.py  platform.py
game-ad-system/dags/: data_pipeline_dag.py
game-ad-system/desktop/: index.html  package-lock.json  package.json  vite.config.js
game-ad-system/desktop/src/: main.js
game-ad-system/infra/: Dockerfile  docker-compose.yml
game-ad-system/src/: __init__.py
game-ad-system/src/creative/: __init__.py  schemas.py
game-ad-system/tests/: test_agent_executor.py  test_agent_tools.py  test_anomaly.py  test_api_health.py  test_api_routes.py  test_appsflyer_adapter.py  test_bid_check.py  test_budget_check.py  test_circuit_breaker.py  test_clickhouse_client.py  test_clip_analyzer.py  test_config.py  test_creative_schemas.py  test_dag.py  test_dag_sync.py  test_element_ranker.py  test_exec_adapter.py  test_execution_schemas.py  test_get_ad_stats.py  test_loader.py  test_memory_retrieve.py  test_memory_store.py  test_merger.py  test_meta_ads_adapter.py  test_models.py  test_redis_client.py  test_safety_exceptions.py  test_safety_exec_integration.py  test_safety_guard.py  test_summarizer.py  test_tagging_pipeline.py  test_whisper.py
(+270 files in other folders)
