[project]
name = "game-ad-system"
version = "0.1.0"
description = "游戏广告买量自动化系统"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "clickhouse-connect>=0.7.0",
    "redis>=5.0.0",
    "apache-airflow>=2.8.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "chromadb>=0.4.22",
    "openai>=1.10.0",
    "httpx>=0.26.0",
    "pandas>=2.1.0",
]

[project.optional-dependencies]
creative = [
    "open-clip-torch>=2.23.0",
    "whisper>=20231117",
    "torch>=2.1.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
